--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
  <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>coop</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -11,10 +13,9 @@
 </head>
 
 <body ng-app='coop'>
-
-	<div>
+	
 		<ng-view></ng-view>
-	</div>
+
 
 
 
