created working coop form and styles

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <script src="app/app.js"></script>
 <script src="app/controllers/mainCtrl.js"></script>
 <script src="app/controllers/mapCtrl.js"></script>
+<script src="app/controllers/ownerCtrl.js"></script>
 <script src="app/services/mainService.js"></script>
 
 
