--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>coop</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link href="style.css" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="node_modules/angularjs-toaster/toaster.css"> -->
 	
 	
 </head>
@@ -31,10 +32,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
 <script src="bower_components/lodash/lodash.js"></script>
 <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+<!-- <script src="node_modules/angularjs-toaster/toaster.js"></script>
+<script src="https://code.angularjs.org/1.2.8/angular-animate.min.js"></script> -->
+
 <script src="app/app.js"></script>
 <script src="app/controllers/mainCtrl.js"></script>
 <script src="app/controllers/mapCtrl.js"></script>
-<script src="app/controllers/ownerCtrl.js"></script>
+<script src="app/controllers/coopCtrl.js"></script>
+<script src="app/controllers/signupCtrl.js"></script>
 <script src="app/services/mainService.js"></script>
 
 
