--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>coop</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link href="style.css" rel="stylesheet">
+	<link rel="icon" href="http://dummyimage.com/16x16/ffffff/000.png&text=C" />
 	<!-- <link rel="stylesheet" href="node_modules/angularjs-toaster/toaster.css"> -->
 	
 	
@@ -40,6 +41,7 @@
 <script src="app/controllers/mapCtrl.js"></script>
 <script src="app/controllers/coopCtrl.js"></script>
 <script src="app/controllers/signupCtrl.js"></script>
+<script src="app/controllers/signupUser.js"></script>
 <script src="app/services/mainService.js"></script>
 
 
